Fixed extra blackspace on mobile and small screens

--- a/styles.css
+++ b/styles.css
@@ -11854,6 +11854,8 @@ width: 100%;
     animation-name: picIncrease;
     animation-iteration-count: infinite;
     position:absolute;
+    padding-top: 0;
+    margin-top: 0;
 
 }
 
@@ -11879,6 +11881,7 @@ width: 100%;
   display: flex;
   margin-left: 31.5%;
   margin-right: 31.5%;
+  margin-bottom: 3vw;
 }
 
 .top-buttons-two{
@@ -11897,4 +11900,7 @@ width: 100%;
   display: inline-flex;
   width: 18vw;
 
+}
+html,body{
+    overflow-x: hidden;
 }
